fix bug indicators, fix footer and contacts positions on small screen

--- a/src/css/contacts.css
+++ b/src/css/contacts.css
@@ -57,6 +57,7 @@ input[type="Email"] {
     margin: 7px 0px;
     height: 32px;
     padding: 0;
+    width: 100%;
 
 }
 
